fix: update icon buttons to add data-cy, align right, and cleaner conditional display

--- a/client/src/templates/Challenges/classic/lower-jaw.css
+++ b/client/src/templates/Challenges/classic/lower-jaw.css
@@ -1,8 +1,13 @@
+.lower-jaw-icon-bar {
+  overflow: hidden;
+}
+
 .lower-jaw-btn-icon {
   line-height: 0;
   margin-right: 2px;
+  float: right;
 }
 
-.lower-jaw-btn-icon:last-child {
+.lower-jaw-btn-icon:first-child {
   margin-right: 0;
 }
